 2011-07-21 10:24  dimitr 
   M src/jrd/btr.cpp
Relaxed the rules a bit thus moving some checks to runtime. This fixes the regression in CORE-1812.

 2011-07-17 09:59  hvlad 
   M src/jrd/LocksCache.h
   M src/jrd/btr.cpp
   M src/jrd/btr.h
Fixed bug CORE-3409 : Segmentation Fault after upgrade 2.1.3 -> 2.1.4

 2011-07-17 09:47  hvlad 
   M src/jrd/dfw.epp
Backported fix for bug CORE-3549 : Database corruption after end of session : page xxx is of wrong type expected 4 found 7

 2011-07-17 02:58  asfernandes 
   M src/burp/restore.epp
Backport improvement CORE-3433 - Improve GBAK restore performance (records insertion).

 2011-07-16 10:08  hvlad 
   M src/jrd/vio.cpp
Backport fix for bug CORE-3557 : AV in engine when preparing query against dropping table

 2011-07-13 13:09  dimitr 
   M src/dsql/dsql.cpp
   M src/remote/interface.cpp
   M src/remote/protocol.cpp
Fixed CORE-3554: Server crashes during prepare or throws incorrect parsing error if the remotely passed SQL query is empty. The origin of the zero-length SQL string passed is still unknown though, so the ticket remains open for a while.

 2011-06-17 12:41  hvlad 
   M src/jrd/cmp.cpp
Fixed bug CORE-3524 : Compiling stored procedure while in use shutdown database

 2011-06-15 10:00  hvlad 
   M src/jrd/cch.cpp
Backport fix for bug CORE-3464 : Dirty page could be written without releasing (or downgrading) page lock. It results in "lock denied" or "lock conversion denied" bugcheck

 2011-06-15 09:53  hvlad 
   M src/jrd/dpm.epp
Backport fix for bug CORE-3468 : Attempt to read after the end of file when nbackup state is stalled

 2011-06-15 09:47  hvlad 
   M src/jrd/dpm.epp
   M src/jrd/dpm_proto.h
   M src/jrd/idx.cpp
   M src/jrd/vio.cpp
Backport fix for bug CORE-3515 : Index corruption. Validation put "missing entries" message into firebird.log

 2011-06-09 00:41  asfernandes 
   M src/jrd/SysFunction.cpp
Fixed CORE-3517 - Server crash with built in function LPAD with string as second parameter.
